--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
   },
   "include": [
     "src/*/*"
-  ]
+, "src/pages/register/register.tsx", "src/pages/home/home.tsx", "src/pages/login/login.tsx"  ]
 }
